--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,15 +7,14 @@ PySCF-Forge 1.0.1 (2024-10-31)
 PySCF-Forge 1.0.0 (2024-05-31)
 ------------------------------
 * PyPI wheels with initial features
-  - CMS-PDFT (Multiconfiguration Pair-Density Functional Theory) energy and analytical nuclear gradients
-  - LPDFT energy and analytical nuclear gradients
+  - CMS-PDFT (Compressed Multiconfiguration Pair-Density Functional Theory) energy and analytical nuclear gradients
+  - L-PDFT (Linearized PDFT) energy and analytical nuclear gradients
   - MC-PDFT energy and analytical nuclear gradients
-  - MS-PDFT energy and analytical nuclear gradients
-  - XMS-PDFT method
-  - Non-adiabatic couplings between states using MS-PDFT method
-  - MCDCFT (Multiconfiguration Density-Coherence Functional Theory) method
-  - MCDCFT dipole moment
-  - MC-PDFT dipole moment and transition dipole moment
+  - XMS-PDFT energy
+  - Non-adiabatic couplings between states using CMS-PDFT method
+  - MC-DCFT (Multiconfiguration Density-Coherence Functional Theory) method
+  - MC-PDFT and CMS-PDFT dipole moment
+  - CMS-PDFT transition dipole moment
   - MC-PDFT energy decomposition analysis
   - LRDF (Long-Range Density Fitting) for energy and analytical nuclear gradients and Hessian 
   - Spin-flip TDA using multi-collinear functionals
